lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:11: error: type mismatch;
 found   : Int(1)
 required: lessons.lander.universe.Point
	if (getX<Segment(0)+1) {
                            ^Lander:13: error: type mismatch;
 found   : Int(1)
 required: lessons.lander.universe.Point
	} else if (getX>Segment(1)-1) {
                                   ^Lander:20: error: not found: value setAngleDesiree
			setAngleDesiree(getAngle-sens*5)
                        ^Lander:22: error: type mismatch;
 found   : Int(1)
 required: lessons.lander.universe.Point
		while ((getX<Segment(0)+1) || (getX>Segment(1)-1)) {
                                        ^Lander:22: error: type mismatch;
 found   : Unit
 required: Array[Int]
		while ((getX<Segment(0)+1) || (getX>Segment(1)-1)) {
                ^Lander:18: error: type mismatch;
 found   : Unit
 required: Array[Int]
	if (sens !=0) {
        ^